# rp-pico-selfstudy

./: .gitignore  AGENTS.md  CHAT.adoc  MEMORY.md  PLAN.md  README.md  STUDENT_START_HERE.md  TODO.md  bootstrap-01-local.sh  bootstrap-02-remote.sh  bootstrap-03-scaffold.sh
.codex/prompts/: consistency-check.md  lesson-generator.md
.github/workflows/: deploy-pages.yml  site-check.yml
docs/: index.md  student-start-here.md  syllabus.md
docs/lessons/: L00-vscode-env.md  L01-setup-flash.md  L04A-nonvolatile-storage.md  L05A-thp-sensor.md  L05B-button-matrix.md  L0A-python-crash.md  L0B-c-crash.md  L0C-cpp-crash.md
lessons/L00-vscode-env/: assessment.md  overview.md
lessons/L00-vscode-env/code/: README.md  env_check.py  micropython_hello.py  verify_env.py
lessons/L00-vscode-env/code/micropython/: hello_repl.py
lessons/L00-vscode-env/code/pico-sdk-usb-hello/: CMakeLists.txt  main.c
lessons/L00-vscode-env/code/pico_sdk_hello/: CMakeLists.txt  main.c
lessons/L01-setup-flash/: assessment.md  overview.md
lessons/L04A-nonvolatile-storage/: assessment.md  overview.md
lessons/L05A-thp-sensor/: assessment.md  overview.md
lessons/L05B-button-matrix/: assessment.md  overview.md
lessons/L0A-python-crash/: assessment.md  overview.md
lessons/L0A-python-crash/code/: 01_variables_types.py  02_conditionals_loops.py  03_functions_modules.py  README.md  sensor_logger.py
lessons/L0B-c-crash/: assessment.md  overview.md
lessons/L0C-cpp-crash/: assessment.md  overview.md
scripts/: build_site.py
